# molecule-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
molecule_parser/: __init__.py  gui.py  output.py  parsing.py
scripts/: run.py
